--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,14 +1,14 @@
 {
-  "projectName": "awsamplifypoc001",
+  "projectName": "vueamplify001",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
-    "framework": "none",
+    "framework": "vue",
     "config": {
       "SourceDir": "src",
       "DistributionDir": "dist",
       "BuildCommand": "npm.cmd run-script build",
-      "StartCommand": "npm.cmd run-script start"
+      "StartCommand": "npm.cmd run-script serve"
     }
   },
   "providers": [
